--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   args: ^2.3.0
   cli_util: ^0.3.5
   file: ^6.1.2
+  interact: ^2.1.1
   path: ^1.8.0
   platform: ^3.0.2
-  prompts: ^2.0.0
   pubspec: ^2.0.1
 
 dev_dependencies:
