--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutterfire_cli
 description: A command-line application for FlutterFire.
 version: 0.1.0
+homepage: "https://github.com/invertase/flutterfire_cli"
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,6 +13,7 @@ dependencies:
   deep_pick: ^0.10.0
   file: ^6.1.2
   interact: ^2.1.1
+  meta: ^1.7.0
   path: ^1.8.0
   platform: ^3.0.2
   pubspec: ^2.0.1
