--- a/melos.yaml
+++ b/melos.yaml
@@ -4,6 +4,15 @@ packages:
   - packages/**
   - "*"
 
+command:
+  version:
+    # Generate commit links in package changelogs.
+    linkToCommits: true
+    # Only allow versioning to happen on main branch.
+    branch: main
+    # Additionally build a changelog at the root of the workspace.
+    workspaceChangelog: true
+
 scripts:
   analyze:
     run: melos exec -c 1 -- "dart analyze . --fatal-infos"
