--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  ansi_styles: ^0.3.0
+  ansi_styles: ^0.3.2+1
   args: ^2.3.0
   ci: ^0.1.0
   cli_util: ^0.3.5
