--- a/.github/workflows/pr_title.yaml
+++ b/.github/workflows/pr_title.yaml
@@ -1,4 +1,4 @@
-name: "PR Title is Conventional"
+name: 'PR Title is Conventional'
 on:
   pull_request_target:
     types:
@@ -8,8 +8,9 @@ on:
 
 jobs:
   main:
+    name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v4.2.0
+      - uses: amannn/action-semantic-pull-request@v4.5.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
