chores: first flutterfire_starter release

--- a/packages/flutterfire_starter/brick.yaml
+++ b/packages/flutterfire_starter/brick.yaml
@@ -1,5 +1,6 @@
 name: flutterfire_starter
 description: A template to have a quickstart with FlutterFire
+repository: https://github.com/invertase/flutterfire_cli/tree/main/packages/flutterfire_starter
 
 version: 0.1.0
 
