--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutterfire_cli
 description: A command-line application for FlutterFire.
-version: 0.2.7
+version: 0.3.0-dev.13
 homepage: "https://github.com/invertase/flutterfire_cli"
 
 environment:
