feat: add Analytics options to FlutterFire Starter

--- a/packages/flutterfire_starter/brick.yaml
+++ b/packages/flutterfire_starter/brick.yaml
@@ -29,5 +29,5 @@ vars:
   plugins:
     type: array
     values:
-      - Analytics (with GoRouter)
-      - Analytics (with Navigator)
+      - Analytics with GoRouter
+      - Analytics with Navigator
