feat: add Analytics options to FlutterFire Starter

--- a/packages/flutterfire_starter/brick.yaml
+++ b/packages/flutterfire_starter/brick.yaml
@@ -28,6 +28,7 @@ vars:
 
   plugins:
     type: array
+    prompt: Which plugins would you like to use?
     values:
       - Analytics with GoRouter
       - Analytics with Navigator
