feat: add Analytics options to FlutterFire Starter

--- a/melos.yaml
+++ b/melos.yaml
@@ -24,6 +24,9 @@ scripts:
   format-check:
     run: melos exec flutter format . --set-exit-if-changed
     description: Run `flutter format` checks for all packages.
+     select-package:
+      ignore:
+       - "flutterfire_starter"
 
   test:
     description: Run tests in a specific package.
