refactor(*): use `dart format` instead of `flutter format`

--- a/melos.yaml
+++ b/melos.yaml
@@ -22,8 +22,8 @@ scripts:
         - "*monorepo*"
 
   format-check:
-    run: melos exec flutter format . --set-exit-if-changed
-    description: Run `flutter format` checks for all packages.
+    run: melos exec dart format . --set-exit-if-changed
+    description: Run `dart format` checks for all packages.
     select-package:
       ignore:
         - "flutterfire_starter"
