--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ executables:
 dev_dependencies:
   flutterfire_cli:
     path: ./packages/flutterfire_cli
+  melos: ^3.0.0
   path: ^1.8.0
   yaml: ^3.1.0
 
