--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -41,6 +41,10 @@ jobs:
         with:
           channel: 'stable'
       - uses: bluefireteam/melos-action@v2
+        with:
+          melos-version: '3.0.0-dev.0'      
+      - name: Install FlutterFire
+        run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite  
       - name: "Run Tests"
         run: melos run test --no-select
 
@@ -53,6 +57,10 @@ jobs:
         with:
           channel: 'stable'
       - uses: bluefireteam/melos-action@v2
+        with:
+          melos-version: '3.0.0-dev.0'
+      - name: Install FlutterFire
+        run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - name: "Run Tests"
         run: melos run test --no-select
 
@@ -65,6 +73,10 @@ jobs:
         with:
           channel: 'stable'
       - uses: bluefireteam/melos-action@v2
+        with:
+          melos-version: '3.0.0-dev.0'      
+      - name: Install FlutterFire
+        run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - uses: actions/checkout@v2
       - name: "Run Tests"
         run: cmd /K melos run test --no-select
