--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -46,10 +46,10 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools
-      - name: "Firebase token"
-        run: firebase --token=${{ secrets.FIREBASE_TOKEN }} projects:list          
       - name: "Firebase login"
-        run: firebase login --no-localhost          
+      - shell: bash
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - name: Install FlutterFire
         run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite  
       - name: "Run Tests"
@@ -69,9 +69,10 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools     
-      - name: "Firebase token"
-        run: firebase --token=${{ secrets.FIREBASE_TOKEN }} projects:list          
       - name: "Firebase login"
+      - shell: bash
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: firebase login --no-localhost               
       - name: Install FlutterFire
         run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
@@ -96,10 +97,10 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools
-      - name: "Firebase token"
-        run: firebase --token=${{ secrets.FIREBASE_TOKEN }} projects:list
       - name: "Firebase login"
-        run: firebase login --no-localhost
+      - shell: bash
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - name: Install FlutterFire
         run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - uses: actions/checkout@v2
