--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -50,6 +50,7 @@ jobs:
       - shell: bash
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase login --no-localhost   
       - name: Install FlutterFire
         run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite  
       - name: "Run Tests"
@@ -101,6 +102,7 @@ jobs:
       - shell: bash
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase login --no-localhost   
       - name: Install FlutterFire
         run: dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - uses: actions/checkout@v2
