--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -74,10 +74,10 @@ jobs:
           sudo npm i -g firebase-tools     
       - name: "Firebase login"
       - shell: bash
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
           firebase login --no-localhost               
-        # env:
-      #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - name: Install FlutterFire
         run: |
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
