--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -72,8 +72,8 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools     
-      - name: "Firebase login"
-        shell: bash
+      - shell: bash
+        name: "Firebase login"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
