--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -77,7 +77,7 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          firebase login --no-localhost               
+          firebase login --interactive               
       - name: Install FlutterFire
         run: |
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
