--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -61,7 +61,7 @@ jobs:
   test_macos:
     runs-on: macos-latest
     env:
-      FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
     timeout-minutes: 25
     steps:
       - uses: actions/checkout@v2
@@ -73,7 +73,11 @@ jobs:
           melos-version: '3.0.0-dev.0'
       - name: "Install Firebase CLI"
         run: |
-          sudo npm i -g firebase-tools                  
+          sudo npm i -g firebase-tools 
+      - name: Set up Google Application Credentials
+        run: |
+          echo "$GOOGLE_APPLICATION_CREDENTIALS" > service-account.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=service-account.json" >> $GITHUB_ENV
       - name: Install FlutterFire
         run: |
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
