--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -70,14 +70,16 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools 
-      - name: Set Firebase token as environment variable
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
+      # - name: Set Firebase token as environment variable
+      #   env:
+      #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
       - name: Install FlutterFire
         run: |
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - name: "Run Tests"
         run: melos run test --no-select
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
 
   test_windows:
     runs-on: windows-latest
