--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -59,6 +59,8 @@ jobs:
   test_macos:
     runs-on: macos-latest
     timeout-minutes: 25
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
@@ -70,16 +72,14 @@ jobs:
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools 
-      # - name: Set Firebase token as environment variable
-      #   env:
-      #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
+      - name: Set Firebase token as environment variable
+        run: |
+          echo $FIREBASE_TOKEN > packages/flutterfire_cli/firebase_token.dart
       - name: Install FlutterFire
         run: |
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - name: "Run Tests"
         run: melos run test --no-select
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
 
   test_windows:
     runs-on: windows-latest
