--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -80,6 +80,8 @@ jobs:
           dart pub global activate --source="path" . --executable="flutterfire" --overwrite        
       - name: "Run Tests"
         run: melos run test --no-select
+        env:
+          FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
 
   test_windows:
     runs-on: windows-latest
