--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -59,7 +59,7 @@ jobs:
   test_macos:
     runs-on: macos-latest
     timeout-minutes: 25
-    environment: Configure CI Environment 
+    environment: CI Environment 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
