--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -6,56 +6,56 @@ on:
       - main
 
 jobs:
-  # analyze:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         channel: 'stable'
-  #     - uses: bluefireteam/melos-action@v2
-  #     - name: "Analyze"
-  #       uses: invertase/github-action-dart-analyzer@v1
-  #       with:
-  #         fatal-infos: true
-  #         fatal-warnings: true
+  analyze:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: bluefireteam/melos-action@v2
+      - name: "Analyze"
+        uses: invertase/github-action-dart-analyzer@v1
+        with:
+          fatal-infos: true
+          fatal-warnings: true
 
-  # format:
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 10
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         channel: 'stable'
-  #     - uses: bluefireteam/melos-action@v2
-  #     - name: "Check formatting"
-  #       run: melos run format-check
+  format:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: bluefireteam/melos-action@v2
+      - name: "Check formatting"
+        run: melos run format-check
 
-  # test_linux:
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 25
-  #   environment: CI Environment 
-  #   env:
-  #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         channel: 'stable'
-  #     - uses: bluefireteam/melos-action@v2
-  #       with:
-  #         melos-version: '3.0.0-dev.0'   
-  #     - name: "Install Firebase CLI"
-  #       run: |
-  #         sudo npm i -g firebase-tools      
-  #     - name: Install FlutterFire
-  #       run: |
-  #         dart pub global activate --source="path" . --executable="flutterfire" --overwrite  
-  #     - name: "Run Tests"
-  #       run: melos run test --no-select
-  #       env:
-  #         FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
+  test_linux:
+    runs-on: ubuntu-latest
+    timeout-minutes: 25
+    environment: CI Environment 
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: bluefireteam/melos-action@v2
+        with:
+          melos-version: '3.0.0-dev.0'   
+      - name: "Install Firebase CLI"
+        run: |
+          sudo npm i -g firebase-tools      
+      - name: Install FlutterFire
+        run: |
+          dart pub global activate --source="path" . --executable="flutterfire" --overwrite  
+      - name: "Run Tests"
+        run: melos run test --no-select
+        env:
+          FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
 
   test_macos:
     runs-on: macos-latest
