ignore flutter starter

--- a/melos.yaml
+++ b/melos.yaml
@@ -33,6 +33,8 @@ scripts:
     description: Run tests in a specific package.
     run: melos exec --concurrency=1 -- "dart pub get && dart pub run test --reporter expanded"
     select-package:
+      ignore:
+        - "flutterfire_starter"
       dir-exists:
         - "test/"
       scope:
