stop testing flutterfire_starter_hooks

--- a/melos.yaml
+++ b/melos.yaml
@@ -35,6 +35,7 @@ scripts:
     select-package:
       ignore:
         - "flutterfire_starter"
+        - "flutterfire_starter_hooks"
       dir-exists:
         - "test/"
       scope:
