--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -44,7 +44,7 @@ jobs:
           channel: 'stable'
       - uses: bluefireteam/melos-action@v2
         with:
-          melos-version: '3.0.0-dev.0'
+          melos-version: '3.0.0'
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools  
@@ -69,7 +69,7 @@ jobs:
           channel: 'stable'
       - uses: bluefireteam/melos-action@v2
         with:
-          melos-version: '3.0.0-dev.0'
+          melos-version: '3.0.0'
       - name: "Install Firebase CLI"
         run: |
           sudo npm i -g firebase-tools  
