temporary removal of windows action

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -80,7 +80,7 @@ jobs:
         run: melos run test --no-select
         env:
           FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
-
+  # Temporarily disabled windows test run until there is time and a machine to test this environment
   # test_windows:
   #   runs-on: windows-latest
   #   timeout-minutes: 25
