--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cli_util: ^0.3.5
   deep_pick: ^0.10.0
   file: ^6.1.2
+  http: ^0.13.5
   interact: ^2.1.1
   meta: ^1.7.0
   path: ^1.8.0
