--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -58,7 +58,7 @@ jobs:
           FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
 
   test_macos:
-    runs-on: macos-13
+    runs-on: macos-latest
     timeout-minutes: 25
     environment: CI Environment 
     env:
