--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   pub_updater: ^0.2.2
   pubspec: ^2.1.0
   xml: ^6.1.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   googleapis_auth: ^1.4.0
