--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.3.0-dev.17
 homepage: "https://github.com/invertase/flutterfire_cli"
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   ansi_styles: ^0.3.2+1
@@ -27,3 +27,8 @@ dev_dependencies:
   test: ^1.24.3
 executables:
   flutterfire:
+
+false_secrets:
+  - /lib/src/firebase.dart
+  - /test/test_files/firebase_options.dart
+  - /test/test_utils.dart
