--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -86,7 +86,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-artifact
-          path: test_output.txt
+          path: ${{ github.workspace }}/test_output.txt
   # Temporarily disabled windows test run until there is time and a machine to test this environment
   # test_windows:
   #   runs-on: windows-latest
