ci: integrate windows tests

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -82,33 +82,34 @@ jobs:
         run: melos run test --no-select
         env:
           FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
-  # Temporarily disabled windows test run until there is time and a machine to test this environment
-  # test_windows:
-  #   runs-on: windows-latest
-  #   timeout-minutes: 25
-  #   environment: CI Environment 
-  #   env:
-  #     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         channel: 'stable'
-  #     - uses: bluefireteam/melos-action@v2
-  #       with:
-  #         melos-version: '3.0.0-dev.0'  
-  #     - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
-  #       name: Install Node.js 16
-  #       with:
-  #         node-version: "16"
-  #     - name: "Install Firebase CLI"
-  #       run: |
-  #         sudo npm i -g firebase-tools
-  #     - name: Install FlutterFire
-  #       run: |
-  #         dart pub global activate --source="path" . --executable="flutterfire" --overwrite
-  #     - uses: actions/checkout@v2
-  #     - name: "Run Tests"
-  #       run: cmd /K melos run test --no-select
-  #       env:
-  #         FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
+  
+  test_windows:
+    runs-on: windows-latest
+    timeout-minutes: 25
+    environment: CI Environment 
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: bluefireteam/melos-action@v2
+        with:
+          melos-version: '3.0.0'  
+      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
+        name: Install Node.js 18
+        with:
+          node-version: "18"
+      - name: "Install Firebase CLI"
+        run: |
+          sudo npm i -g firebase-tools
+      - name: Install FlutterFire
+        run: |
+          dart pub global activate --source="path" . --executable="flutterfire" --overwrite
+      - uses: actions/checkout@v2
+      - name: "Run Tests"
+        run: cmd /K melos run test --no-select
+        env:
+          FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
