--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,7 +21,11 @@ analyzer:
     # We explicitly enabled even conflicting rules and are fixing the conflict
     # in this file
     included_file_warning: ignore
-  exclude: [packages/flutterfire_starter/__brick__/**, packages/flutterfire_cli/test/test_files/firebase_options.dart]
+  exclude:
+    [
+      packages/flutterfire_starter/__brick__/**,
+      packages/flutterfire_cli/test/test_files/firebase_options.dart,
+    ]
 
 linter:
   rules:
