--- a/packages/flutterfire_starter/brick.yaml
+++ b/packages/flutterfire_starter/brick.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/invertase/flutterfire_cli/tree/main/packages/flut
 version: 0.1.1
 
 environment:
-  mason: ">=0.1.0-dev.26 <0.1.0"
+  mason: '>=0.1.0-dev.26 <0.1.0'
 
 vars:
   name:
