--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: "flutterfire_cli_monorepo"
 publish_to: none
+environment:
+  sdk: ">=2.17.0 <3.0.0"
 
 executables:
   flutterfire: flutterfire_dev
@@ -14,6 +16,3 @@ dev_dependencies:
 dependency_overrides:
   flutterfire_cli:
     path: ./packages/flutterfire_cli
-
-environment:
-  sdk: '>=2.12.0 <3.0.0'
