--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   args: ^2.3.0
   ci: ^0.1.0
   cli_util: ^0.4.0
+  collection: ^1.18.0
   deep_pick: ^1.0.0
   file: ^7.0.0
   http: ^1.2.1
