chore: update release process & include generated CLi version script

--- a/melos.yaml
+++ b/melos.yaml
@@ -38,4 +38,4 @@ scripts:
         - flutterfire_cli
 
   format: dart format -o write .
-  version: dart run scripts/generate_version.dart && git add packages/flutterfire_cli/lib/version.g.dart
+  cli-version: dart run scripts/generate_version.dart && git add packages/flutterfire_cli/lib/version.g.dart
