--- a/packages/flutterfire_starter/hooks/pubspec.yaml
+++ b/packages/flutterfire_starter/hooks/pubspec.yaml
@@ -4,5 +4,5 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutterfire_cli: ^1.0.1-dev.4
+  flutterfire_cli: ^1.0.1
   mason: ^0.1.0-dev.40
